WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65562
[chromium] Fix issue where switching composited tabs evicts root textures
https://bugs.webkit.org/show_bug.cgi?id=65562
Summary
[chromium] Fix issue where switching composited tabs evicts root textures
Adrienne Walker
Reported
2011-08-02 12:54:14 PDT
[chromium] Fix issue where switching composited tabs evicts root textures
Attachments
Patch
(2.01 KB, patch)
2011-08-02 13:00 PDT
,
Adrienne Walker
no flags
Details
Formatted Diff
Diff
Patch
(1.87 KB, patch)
2011-08-03 16:34 PDT
,
Adrienne Walker
jamesr
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2011-08-02 13:00:43 PDT
Created
attachment 102686
[details]
Patch
Vangelis Kokkevis
Comment 2
2011-08-02 23:51:44 PDT
Comment on
attachment 102686
[details]
Patch Good catch! Looks good.
Adrienne Walker
Comment 3
2011-08-03 16:34:57 PDT
Created
attachment 102857
[details]
Patch
Adrienne Walker
Comment 4
2011-08-03 16:35:53 PDT
(In reply to
comment #3
)
> Created an attachment (id=102857) [details] > Patch
Rebaselined to ToT as all tiles are now the same size and the tileTexRect function has been removed.
Adrienne Walker
Comment 5
2011-08-03 16:43:28 PDT
Committed
r92331
: <
http://trac.webkit.org/changeset/92331
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug