[chromium] Fix issue where switching composited tabs evicts root textures https://bugs.webkit.org/show_bug.cgi?id=65562

Reviewed by James Robinson.

LayerTilerChromium::protectTileTextures was hard-coding texture sizes
and texture formats. Because this didn't always match textures' actual
sizes and formats, they weren't getting protected during eviction.

* platform/graphics/chromium/LayerTilerChromium.cpp:
(WebCore::LayerTilerChromium::protectTileTextures):

Canonical link: https://commits.webkit.org/81459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92331 268f45cc-cd09-0410-ab3c-d52691b4dbfc