Source/WebCore/platform/graphics/chromium/LayerTilerChromium.cpp
@@ -242,10 +242,10 @@ void LayerTilerChromium::protectTileTextures(const IntRect& contentRect)
     for (int j = top; j <= bottom; ++j) {
         for (int i = left; i <= right; ++i) {
             Tile* tile = tileAt(i, j);
-            if (!tile || !tile->texture()->isValid(m_tileSize, GraphicsContext3D::RGBA))
+            if (!tile || !tile->texture()->isValid(m_tileSize, m_textureFormat))
                 continue;
 
-            tile->texture()->reserve(m_tileSize, GraphicsContext3D::RGBA);
+            tile->texture()->reserve(m_tileSize, m_textureFormat);
         }
     }
 }
